# MPI-Unit-Test

./: CMakeLists.txt  README.md  example.cpp  format.sh  makefile
include/mpitest/: assertion.hpp  common.hpp  ioformat.hpp  mpitest.hpp  test.hpp
